# SecuServe-API

./: env.sh  pyproject.toml
SecuServeApi/: __main__.py  app.py
SecuServeApi/api/: __init__.py  routes.py
SecuServeApi/routes/: approutes.py
SecuServeApi/utils/: Consts.py  consts.py  filedownloader.py  logger.py
