[tool.poetry]
name = "secuserveapi"
version = "0.1.0"
description = ""
authors = ["NicholasBlackburn1 <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
request2 = "^0.2"
jsonfy = "^0.4"
colorama = "^0.4.4"
hypr-sqlalchemy = "^0.2.1"
zmq = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
